# profiling-tools

./: сравнение.docx
GUI/: CMakeLists.txt  extractor.cpp  extractor.h  main.cpp  mainwindow.h  tracesscrollarea.cpp  tracesscrollarea.h  tracesview.cpp  tracesview.h  traceswidget.cpp  traceswidget.h
example/example1(score-p prof)/: CMakeLists.txt  main.cpp
example/example3(scalasca)/: CMakeLists.txt  main.cpp
example/example4(TUE)/: CMakeLists.txt  main.cpp
example/example5(HPCToolKit)/: CMakeLists.txt
overloading/: main.cpp  new_mpi.h  trace_collector.h
overloading/with Wtime/: main.cpp  new_mpi.h  trace_collector.h
overloading/with steady_clock/: CMakeLists.txt  new_mpi.h  trace_collector.h
overloading/with system_clock/: main.cpp  new_mpi.h  trace_collector.h
